--- a/config.json
+++ b/config.json
@@ -3,9 +3,9 @@
   "prefix": "Insert command prefix here (typically '!')",
   "bungieKey": { "X-API-Key": "Insert Bungie API here" },
   "channelID": "Insert chosen text channel's ID",
-  "names": ["Comma","seperated","array","containing","each","players","names"],
+  "names": ["Comma","seperated","array","containing","each","players","name"],
   "membershipType":["Comma","seperated","array","containing","each","players","membershipType"],
   "membershipID": ["Comma","seperated","array","containing","each","players","membershipID"],
-  "autoTime": "14",
-  "displayedTime": "10am"
+  "autoTime": "Insert hour in your timezone for when you want an auto update (0-23)",
+  "timezone": "Insert deviation from GMT Timezone (-12 to 12)"
 }
