Major Update. Added Player Management From Within Discord

--- a/config.json
+++ b/config.json
@@ -1,12 +1,6 @@
 {
-  "token": "Insert Discord Bot Token Here",
-  "prefix": "Insert command prefix here (typically '!')",
-  "bungieKey": { "X-API-Key": "Insert Bungie API here" },
-  "herokuKey": "Insert Heroku API key from account settings on heroku",
-  "channelID": "Insert chosen text channel's ID",
-  "names": ["Comma","seperated","array","containing","each","players","name"],
-  "membershipType":["Comma","seperated","array","containing","each","players","membershipType"],
-  "membershipID": ["Comma","seperated","array","containing","each","players","membershipID"],
-  "autoTime": "Insert hour in your timezone for when you want an auto update (0-23)",
-  "timezone": "Insert deviation from GMT Timezone (-12 to 12)"
+  "prefix": "!",
+  "discordKey": "",
+  "bungieKey": "",
+  "herokuKey": ""
 }
