--- a/.gitignore
+++ b/.gitignore
@@ -2104,3 +2104,8 @@ node_modules/yallist/LICENSE
 node_modules/yallist/package.json
 node_modules/yallist/README.md
 node_modules/yallist/yallist.js
+test.sql
+test2.sql
+test3.sql
+sweetstats - Copy.db
+.gitignore
